@@ -412,6 +412,13 @@ FUNCTION_NAME (struct __gconv_step *step, struct __gconv_step_data *data,
 	    }
 #endif
 
+	  /* Give the transliteration module the chance to store the
+	     original text and the result in case it needs a context.  */
+	  if (data->__trans.__trans_context_fct != NULL)
+	    DL_CALL_FCT (data->__trans.__trans_context_fct,
+			 (data->__trans.__data, inptr, *inptrp,
+			  outstart, outbuf));
+
 	  /* We finished one use of the loops.  */
 	  ++data->__invocation_counter;
 
